--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "convert-byte-size-string"
-version = "1.1.1"
+version = "1.1.2"
 authors = ["demize <demize@unstable.systems>"]
 edition = "2018"
-license-file = "LICENSE"
+license = "MIT"
 description = "Convert a byte size string to a u128 value."
 repository = "https://github.com/demize/convert-byte-size-string"
 readme = "README.md"
